# agfin_mvp

./: .env.docker-compose  .gitignore  CLAUDE.md  DOCKER_SETUP.md  README.md  SUPABASE.md  claude-progress.md  docker-compose.yml  init.sh  package-lock.json  package.json  playwright.config.ts
.claude/agents/: agfin-builder.md  agfin-planner.md  (+5 more)
ai-service/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai-service/src/claude/: README.md  client.py  test_client.py
ai-service/src/conversation/: __init__.py  history.py
ai-service/src/database/: __init__.py  connection.py
ai-service/src/memory/: README.md  mem0_client.py  test_mem0.py
ai-service/src/prompts/: __init__.py  system_prompt.py
ai-service/src/routers/: __init__.py  chat.py  health.py  sessions.py  stream.py
ai-service/src/tools/: __init__.py  certify_application.py  create_application.py  extract_fields.py  query_application.py  registry.py  request_audit.py  show_artifact.py  update_module.py  upload_document.py
ai-service/src/utils/: __init__.py  title_generator.py
client/: .env.example  package.json  tailwind.config.js  vite.config.ts
deploy/: README.md  production.config.js
docs/: accessibility-checklist.md  testing-plan.md
e2e/: api-debug.spec.ts  chat-functionality.spec.ts  env-check.spec.ts  prd-validation.spec.ts  quick-test.spec.ts  signin-flow.spec.ts  suggestion-cards.spec.ts  welcome-modal.spec.ts
server/: .env.example  package-lock.json  package.json  tsconfig.json
supabase/: config.toml  create-dev-user.sql  kong.yml  seed.sql
(+301 files in other folders)
